--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,8 @@
   "projects": {
     "angular-tour-of-heroes": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
